# Project-Lumen

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  NEXT_STEPS_FEATURE_RECOMMENDATIONS.md  README.md  analysis_options.yaml  build.gradle.kts  docs.md  flutter-mobile-dev-guide.md  gradle.properties  gradlew  gradlew.bat  pubspec.yaml  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  lumen_security.cpp
backend/: Cargo.toml  README.md
backend/admin/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json
backend/admin/assets/: admin-api.js  app.js  charts.js  dashboard-model.js  data.js  module-components.js  modules.js  styles.css  ui.js
backend/admin/src/: AdminDashboardApp.tsx  main.tsx  styles.css  types.ts
backend/admin/src/api/: adminApi.ts
backend/admin/src/components/: DashboardControls.tsx  MiniChart.tsx  ShellPanels.tsx  common.tsx
backend/admin/src/components/modules/: ContentModules.tsx  ModuleCard.tsx  ObservabilityModules.tsx  ReleaseModules.tsx  UserModules.tsx  module-actions.ts
backend/admin/src/data/: adminSections.ts
backend/admin/src/model/: actionPayloads.ts  dashboardModel.ts  jsonAccess.ts
backend/src/: admin_context.rs  api.rs  auth_context.rs  config.rs  error.rs  lib.rs  main.rs  outemail.rs  server.rs  state.rs
backend/src/models/: admin.rs  auth.rs  backups.rs  common.rs  entitlements.rs  face_analysis.rs  mod.rs  privileged_control.rs  sync.rs  telemetry.rs
backend/src/routes/: admin.rs  audit.rs  backups.rs  devices.rs  entitlements.rs  face_analysis.rs  health.rs  me.rs  platform.rs  privileged_control.rs  purchases.rs  security.rs  session.rs  sync.rs  telemetry.rs
backend/src/store/: admin_actions.rs  admin_audit.rs  admin_auth.rs  admin_dashboard.rs  admin_dashboard_ops.rs  auth.rs  backups.rs  devices.rs  documents.rs  entitlements.rs  face_analysis.rs  mod.rs  privileged_control.rs  sync.rs  telemetry.rs  time.rs
baselineprofile/: build.gradle.kts
design/: lumen-ui-tokens.json
docs/: ANDROID_11_VIVO_ADAPTATION.md  ANDROID_12_VIVO_ADAPTATION.md  ANDROID_13_VIVO_ADAPTATION.md  ANDROID_14_VIVO_ADAPTATION.md  ANDROID_15_VIVO_ADAPTATION.md  ANDROID_16_VIVO_ADAPTATION.md  ANDROID_17_VIVO_ADAPTATION.md  CLIENT_EXISTING_FEATURES.md  NEXT_STEPS_FEATURE_RECOMMENDATIONS.md  docs.md  index.md  todo  (+13 more)
(+525 files in other folders)
